# aubio

./: .appveyor.yml  .bzrignore  .coveragerc  .gitignore  .landscape.yml  .readthedocs.yaml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README  README.md  README.windows-vcpkg.md  THANKS  TODO  VERSION  Version.py  aclocal.m4  appveyor.yml  aubio.pc.in  azure-pipelines.yml  bootstrap  build.sh  circle.yml  configure  configure.ac  ltmain.sh  meta.yaml  nose2.cfg  py-compile  requirements.txt  setup.py  this_version.py  waf  wscript
cpp/: Makefile.am  aubiocpp.cpp  aubiocpp.h  wscript_build
doc/: Makefile  Makefile.am  Makefile.in  about.rst  android.rst  aubio.css  aubio.txt  aubiocut.sgml  aubiocut.txt  aubiolevel.txt  aubiomfcc.sgml  aubiomfcc.txt  aubionotes.sgml  aubionotes.txt  aubioonset.sgml  aubioonset.txt  aubiopitch.sgml  aubiopitch.txt  aubioquiet.txt  aubiotrack.sgml  aubiotrack.txt  building.rst  cli.rst  cli_features.rst  conf.py  debian_packages.rst  devel.cfg  develop.rst  download.rst  examples.cfg  full.cfg  header.html  index.rst  installing.rst  py_datatypes.rst  py_io.rst  py_utils.rst  python.rst  python_api.rst  python_module.rst  (+5 more)
examples/: Makefile.am  Makefile.in  aubiolevel.c  aubiomfcc.c  aubionotes.1  aubionotes.c  aubionotesmedian.c  aubioonset.1  aubioonset.c  aubiopitch.c  aubioquiet.c  aubiotrack.c  jackio.c  jackio.h  midialsa.c  midiparse.c  midiplay.c  parse_args.h  plotfb.py  plotmat.py  sndfileio.c  sndfileio.h  testforclam.c  utils.c  utils.h  wscript_build
examples/tests/: Makefile.am  test-beattracking.c  test-fft.c  test-hist.c  test-mfft.c  test-onset.c  test-onsetdetection.c  test-phasevoc-jack.c  test-phasevoc.c  test-pitchfcomb.c  test-pitchyin.c  test-pitchyinfft.c  test-scale.c  test-tempo.c  test-tss.c  test-window.c
ext/: Makefile.am  Makefile.in  aubioext.h  jackio.c  jackio.h  sndfileio.c  wscript_build
ext/midi/: list.h  midi_alsa_seq.c  midi_driver.c  midi_driver.h  midi_event.c  midi_file.c  midi_file.h  midi_parser.h  midi_player.c  midi_track.c  timer.c
interfaces/java/aubio/: Makefile.am  main.java
plugins/puredata/: Makefile.am  Makefile.in  aubio_setup.c  aubioonset~.c  aubiopitch~.c  aubioquiet~.c  aubiotempo~.c  aubiotss~.c  aubiozcr~.c  help-aubioonset~.pd  help-aubioquiet~.pd  help-aubiotempo~.pd  help-aubiotss~.pd  libtoolkludge  wscript_build
plugins/puredata/examples/: onset-cam.pd
plugins/puredata/help/: aubiopitch~-help.pd  aubiotss~-help.pd  aubiozcr~-help.pd
python/aubio/: Makefile.am  Makefile.in  __init__.py  aubioclass.py  gnuplot.py  median.py  onsetcompare.py  tasks.py  txtfile.py  wscript_build
python/aubio/bench/: config.py  node.py  onset.py
python/aubio/plot/: keyboard.py  notes.py
python/aubio/task/: __init__.py  beat.py  cut.py  notes.py  (+5 more)
src/: Makefile.am  Makefile.in  aubio.h  aubio_priv.h  aubiofilterbank.c  aubiofilterbank.h  bark.c  bark.h  beattracking.c  beattracking.h  biquad.c  biquad.h  config.h  config.h.in  cvec.c  cvec.h  fft.c  fft.h  filter.c  filter.h  filterbank.c  filterbank.h  fmat.c  fmat.h  fvec.c  fvec.h  hist.c  hist.h  jackio.h  list.c  lvec.c  lvec.h  mathutils.c  mathutils.h  mfcc.c  mfcc.h  midi.c  midi.h  midi_alsa_raw.c  midi_alsa_seq.c  (+43 more)
src/ai/: activation.c  activation.h  batchnorm.c  batchnorm.h  conv1d.c  conv1d.h  conv2d.c  conv2d.h  dense.c  dense.h  maxpool1d.c  maxpool1d.h  maxpool2d.c  maxpool2d.h  tensor.c  tensor.h
src/effects/: pitchshift.c  pitchshift.h  pitchshift_dummy.c  pitchshift_rubberband.c  rubberband_utils.c  timestretch.h  timestretch_dummy.c  timestretch_rubberband.c
src/io/: audio_unit.c  audio_unit.h  file_hdf5.c  file_hdf5.h  ioutils.c  ioutils.h  sink.c  sink.h  sink_apple_audio.c  sink_apple_audio.h  sink_flac.c  sink_sndfile.c  sink_sndfile.h  sink_vorbis.c  sink_wavwrite.c  sink_wavwrite.h  sndfileio.c  sndfileio.h  source.c  source.h  source_apple_audio.c  source_apple_audio.h  source_avcodec.c  source_avcodec.h  source_sndfile.c  source_sndfile.h  source_wavread.c  source_wavread.h  utils_apple_audio.c
src/notes/: notes.c  notes.h
src/onset/: onset.c  onset.h  onsetdetection.c  onsetdetection.h  peakpick.c  peakpick.h  peakpicker.c  peakpicker.h
src/pitch/: pitch.c  pitch.h  pitch_crepe.c  pitchdetection.c  pitchdetection.h  pitchfcomb.c  pitchfcomb.h  pitchmcomb.c  pitchmcomb.h  pitchschmitt.c  pitchschmitt.h  pitchspecacf.c  pitchspecacf.h  pitchyin.c  pitchyin.h  pitchyinfast.c  pitchyinfast.h  pitchyinfft.c  pitchyinfft.h
src/spectral/: awhitening.c  awhitening.h  dct.c  dct.h  dct_accelerate.c  dct_fftw.c  dct_ipp.c  dct_ooura.c  dct_plain.c  fft.c  fft.h  filterbank.c  filterbank.h  filterbank_mel.c  filterbank_mel.h  mfcc.c  mfcc.h  ooura_fft8g.c  phasevoc.c  phasevoc.h  specdesc.c  specdesc.h  spectral_centroid.c  spectral_centroid.h  statistics.c  tss.c  tss.h
src/synth/: sampler.c  sampler.h  wavetable.c  wavetable.h
src/tempo/: beattracking.c  beattracking.h  tempo.c  tempo.h
src/temporal/: a_weighting.c  a_weighting.h  adesign.c  adesign.h  biquad.c  biquad.h  c_weighting.c  c_weighting.h  cdesign.c  cdesign.h  filter.c  filter.h  filter_priv.h  resample.c  resample.h  resampler.c  resampler.h
src/utils/: hist.c  hist.h  log.c  log.h  parameter.c  parameter.h  ringbuffer.c  ringbuffer.h  scale.c  scale.h  strutils.c  windll.c
swig/: Makefile.am  Makefile.in  aubio.i  swig.py
tests/cpp/: Makefile.am  test-cvec.cpp  test-fvec.cpp
tests/src/: Makefile.am  test-beattracking.c  test-biquad.c  test-cvec.c  test-delnull.c  test-fft.c  test-filter.c  test-filterbank.c  test-filterbank_mel.c  test-fmat.c  test-fvec.c  test-hist.c  test-lvec.c  test-mathutils-window.c  test-mathutils.c  test-mfcc.c  test-mfft.c  test-onset.c  test-onsetdetection.c  test-peakpick.c  test-phasevoc-jack.c  test-phasevoc.c  test-pitch.c  test-pitchdetection.c  test-pitchfcomb.c  test-pitchmcomb.c  test-pitchschmitt.c  test-pitchyin.c  test-pitchyinfft.c  test-resample.c  test-sample.c  test-scale.c  test-tempo.c  test-tss.c  test-window.c  wscript_build
(+455 files in other folders)
